[gd_scene load_steps=9 format=3 uid="uid://dvwd1g1p04v7"]

[ext_resource type="Script" path="res://Logica/alarm.gd" id="1_qjpui"]
[ext_resource type="Texture2D" uid="uid://cxi7egiwtl4ph" path="res://icon.svg" id="1_tji8i"]
[ext_resource type="AudioStream" uid="uid://c4mlcvy4ulyxs" path="res://Recursos/Sound/4_MMM.wav" id="2_bwrls"]
[ext_resource type="AudioStream" uid="uid://cnoxun8vpt3su" path="res://Recursos/Sound/1_sfxr.wav" id="4_vyayn"]

[sub_resource type="Animation" id="Animation_w256x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bell:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioBell:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioTest:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dyx02"]
resource_name = "breakAlarm"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioTest:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioBell:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bell:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_m02av"]
resource_name = "pomoAlarm"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bell:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioBell:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u2h6i"]
_data = {
"RESET": SubResource("Animation_w256x"),
"breakAlarm": SubResource("Animation_dyx02"),
"pomoAlarm": SubResource("Animation_m02av")
}

[node name="Alarm" type="Node2D"]
script = ExtResource("1_qjpui")

[node name="BG" type="Sprite2D" parent="."]
self_modulate = Color(0.461922, 0.6244, 0.671261, 1)
position = Vector2(84, 84)
scale = Vector2(1.3125, 1.3125)
texture = ExtResource("1_tji8i")

[node name="Plus" type="Button" parent="."]
offset_top = 128.0
offset_right = 80.0
offset_bottom = 159.0
text = "+"

[node name="Minus" type="Button" parent="."]
offset_left = 88.0
offset_top = 128.0
offset_right = 168.0
offset_bottom = 160.0
text = "-"

[node name="Bell" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
position = Vector2(80, 72)
scale = Vector2(0.375, 0.4375)
texture = ExtResource("1_tji8i")

[node name="AudioBell" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bwrls")

[node name="AudioTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vyayn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u2h6i")
}

[connection signal="pressed" from="Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_minus_pressed"]
